// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appellant Displays appellant information when appellant is not veteran 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Appellant
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Appellant Name
    </strong>
    <pre>
      Tom Brady
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Relation to Veteran
    </strong>
    <pre>
      Spouse
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Appellant Mailing Address
    </strong>
    <pre>
      Tom Brady
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="Appellant Email (for these notifications only)"
        >
          <strong>
            <span>
              Appellant Email (for these notifications only)
              <span
                class="cf-required"
              >
                Required
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="Appellant Email (for these notifications only)"
            name="Appellant Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Displays email alert when email is null 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Veteran
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Name
    </strong>
    <pre>
      John Smith
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Mailing Address
    </strong>
    <pre>
      John Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Veteran Email (for these notifications only)
        </strong>
        <pre>
          None
        </pre>
      </div>
      <div>
        <div
          class="usa-alert usa-alert-info usa-alert-slim"
          role="alert"
        >
          <div
            class="usa-alert-body"
          >
            <div
              class="usa-alert-text"
            >
              If you have the Veteran's email address, enter it in VBMS. The email will be required to send notifications when you schedule the hearing.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Displays email alert when email is undefined 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Veteran
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Name
    </strong>
    <pre>
      John Smith
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Mailing Address
    </strong>
    <pre>
      John Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Veteran Email (for these notifications only)
        </strong>
        <pre>
          None
        </pre>
      </div>
      <div>
        <div
          class="usa-alert usa-alert-info usa-alert-slim"
          role="alert"
        >
          <div
            class="usa-alert-body"
          >
            <div
              class="usa-alert-text"
            >
              If you have the Veteran's email address, enter it in VBMS. The email will be required to send notifications when you schedule the hearing.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Displays timezone when showTimezoneField is passed as prop 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Veteran
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Name
    </strong>
    <pre>
      John Smith
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Mailing Address
    </strong>
    <pre>
      John Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class=""
      >
        <div
          class="cf-form-dropdown dropdown-appellantTz"
          data-css-1dzedb9=""
        >
          <label
            class="question-label"
            for="appellant-tz"
            id="appellant-tz-label"
          >
            <strong>
              <span>
                Veteran Timezone
                <span
                  class="cf-required"
                >
                  Required
                </span>
              </span>
            </strong>
          </label>
          <div
            class="cf-select"
          >
            <div
              class=" css-2b097c-container"
            >
              <div
                class="cf-select__control css-yk16xz-control"
              >
                <div
                  class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                >
                  <div
                    class="cf-select__single-value css-1uccc91-singleValue"
                  >
                    Pacific Time (US & Canada) (3:00 AM)
                  </div>
                  <div
                    class="css-81nyic-Input"
                  >
                    <div
                      class="cf-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-labelledby="appellant-tz-label"
                        aria-owns="appellant-tz-listbox"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="appellant-tz"
                        role="combobox"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="cf-select__indicator cf-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="appellantTz"
                type="hidden"
                value="America/Los_Angeles"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="helper-text"
      >
        The hearing time in email notifications is calculated based on the timezone.
      </div>
    </div>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="Veteran Email (for these notifications only)"
        >
          <strong>
            <span>
              Veteran Email (for these notifications only)
              <span
                class="cf-required"
              >
                Required
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="Veteran Email (for these notifications only)"
            name="Veteran Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Does not allow editing emails when read-only 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Veteran
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Name
    </strong>
    <pre>
      John Smith
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Mailing Address
    </strong>
    <pre>
      John Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        data-css-1a5irm0=""
        data-testid="read-only-testid"
      >
        <strong>
          Veteran Email (for these notifications only)
        </strong>
        <pre>
          None
        </pre>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Does not display address when formFieldsOnly = true 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <strong>
     Appellant
  </strong>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="Appellant Email (for these notifications only)"
        >
          <strong>
            <span>
              Appellant Email (for these notifications only)
              <span
                class="cf-required"
              >
                Required
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="Appellant Email (for these notifications only)"
            name="Appellant Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Appellant Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="cf-help-divider"
  />
  <h2>
    Veteran
  </h2>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Name
    </strong>
    <pre>
      John Smith
    </pre>
  </div>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Veteran Mailing Address
    </strong>
    <pre>
      John Smith
9999 MISSION ST
SAN FRANCISCO, CA 94103
    </pre>
  </div>
  <div
    class="usa-grid css-1jfbwxw"
    id="email-section"
  >
    <div
      class="usa-width-one-half"
    >
      <div
        class="cf-form-textinput cf-inline-field   "
      >
        <label
          for="Veteran Email (for these notifications only)"
        >
          <strong>
            <span>
              Veteran Email (for these notifications only)
              <span
                class="cf-required"
              >
                Required
              </span>
            </span>
          </strong>
        </label>
        <div
          class="input-container"
        >
          <input
            class="cf-form-textinput cf-inline-field"
            id="Veteran Email (for these notifications only)"
            name="Veteran Email (for these notifications only)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="helper-text"
      >
        This email address will be used to send notifications for this hearing only.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
